// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayInsights component should match the snapshot 1`] = `
<section
  className="display-insights-section"
>
  <header>
    <h3>
      Insights
    </h3>
    <button
      onClick={[Function]}
    >
      <img
        alt="down-arrow"
        className=""
        src="down.svg"
      />
    </button>
  </header>
</section>
`;

exports[`DisplayInsights component should match the snapshot if block is opened 1`] = `
<section
  className="display-insights-section"
>
  <header>
    <h3>
      Insights
    </h3>
    <button
      onClick={[Function]}
    >
      <img
        alt="down-arrow"
        className="up-btn"
        src="down.svg"
      />
    </button>
  </header>
  <ul
    className="display-insights-body-div"
  >
    <h2>
      A goose flies south
    </h2>
    <li>
      Why is the goose flying?
    </li>
    <li>
      How does a goose fly?
    </li>
    <li>
      Why not fly south?
    </li>
  </ul>
  <button
    onClick={[Function]}
    type="button"
  >
    Next
  </button>
</section>
`;
